tests/core/snapshots/call-multiple-steps-piping.md_merged.snap
---
source: tests/core/spec.rs
assertion_line: 235
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  a(input: JSON): JSON @expr(body: "{{.args.input.a}}")
  aInput(input: JSON): JSON @expr(body: {input: "{{.args.input.a}}"})
  abc(input: JSON): JSON
    @call(
      steps: [
        {query: "a", args: {input: "{{.args.input}}"}}
        {query: "wrapArgs"}
        {query: "b"}
        {query: "wrapArgs"}
        {query: "c"}
      ]
    )
  abcInput(input: JSON): JSON
    @call(
      steps: [
        {query: "wrapInput", args: {input: "{{.args.input}}"}}
        {query: "aInput"}
        {query: "wrapInput"}
        {query: "bInput"}
        {query: "wrapInput"}
        {query: "c"}
      ]
    )
  b(input: JSON): JSON @expr(body: "{{.args.input.b}}")
  bInput(input: JSON): JSON @expr(body: {input: "{{.args.input.b}}"})
  c(input: JSON): JSON @expr(body: "{{.args.input.c}}")
  wrapArgs: JSON @expr(body: {input: "{{.args}}"})
  wrapInput(input: JSON): JSON @expr(body: {input: "{{.args.input}}"})
}
