tests/core/snapshots/graphql-datasource-no-args.md_client.snap
---
source: tests/core/spec.rs
assertion_line: 278
expression: formatted
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  usersList: [User]
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
