tests/core/snapshots/grpc-map.md_merged.snap
---
source: tests/core/spec.rs
assertion_line: 235
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://localhost:50051", batch: {delay: 10, headers: []}, httpCache: true)
  @link(src: "map.proto", type: Protobuf) {
  query: Query
}

type MapMapRequest {
  map: JSON!
}

type MapMapResponse @tag(id: "map.MapResponse") {
  map: JSON!
}

type Query {
  mapMapServiceGetMap(mapRequest: map__MapRequest!): map__MapResponse!
    @grpc(body: "{{.args.mapRequest}}", method: "map.MapService.GetMap")
}
