tests/core/snapshots/showcase.md_client.snap
---
source: tests/core/spec.rs
assertion_line: 278
expression: formatted
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  notUser: User
}

scalar Url

type User {
  notId: Int
  notName: String
}

schema {
  query: Query
}
