tests/core/snapshots/test-interface-from-json.md_merged.snap
---
source: tests/core/spec.rs
assertion_line: 235
expression: formatter
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type B implements IA {
  a: String
  b: String
}

type Ia {
  a: String
}

type Query {
  bar: B @http(path: "/posts")
}
